# hept

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  comp.glsl  hept.h  main.cpp
examples/hept_pong/: main.c
examples/hept_tri/: main.c
glsl/: bloom_get.glsl  bloom_set.glsl  cam.glsl  comp.glsl  comp2.glsl  eye.glsl  frag.glsl  lighting.glsl  lighting_rays.glsl  rast.glsl  sky.glsl  tiles.glsl  vert.glsl  win_frag.glsl  win_vert.glsl  world_bg.glsl
